DEV: improve use of doPrivileged()